--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.exe
 *.o
 *.so
+*.*ignore
 
 # Packages #
 ############
@@ -37,3 +38,7 @@
 Icon?
 ehthumbs.db
 Thumbs.db
+
+# Folders #
+###########
+node_modules/
